Corrected background colour in style.css and added toggle price visibility code.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     min-height: 100vh;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: f0f0f0;
+    background-color: #f0f0f0;
     display: flex;
     flex-direction: column;
 }
